# ai

./: .gitignore  README.md  SETUP-NODE.md  run-npm.sh  setup-github.sh  skills-frontend-copywriting.sh  skills.sh
.github/workflows/: deploy-avioane-pages.yml
avioane/: README.md  index.html  package-lock.json  package.json  vite.config.ts
avioane/public/: 404.html
avioane/src/: App.css  App.tsx  Grid.css  Grid.tsx  PlaneIcon.css  PlaneIcon.tsx  game.ts  index.css  phantom.d.ts  types.ts  usePhantom.ts
backgammon/: README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.node.json
backgammon-solana/: .gitignore  Anchor.toml  README.md  TESTING.md  vercel.json
backgammon-solana/backend/: TESTING_RESULTS.md  package-lock.json  package.json
backgammon-solana/docs/: GRANT_APPLICATION.md  PRIVACY_POLICY.md  TERMS_OF_SERVICE.md
backgammon-solana/mobile/: App.tsx  app.json  package.json
backgammon-solana/programs/tabla-game/: Cargo.toml
backgammon-solana/programs/tabla-game/src/: errors.rs  lib.rs  state.rs
backgammon-solana/programs/tabla-game/src/instructions/: claim_winnings.rs  create_tournament.rs  initialize_game.rs  make_move.rs  mint_board_nft.rs  mod.rs  register_tournament.rs  roll_dice.rs
backgammon-solana/scripts/: deploy.sh  setup.sh
backgammon-solana/web-demo/: game.js  index.html  style.css
backgammon/src/: App.css  App.tsx  Board.css  Board.tsx  Dice.css  Dice.tsx  (+3 more)
bark/: .gitignore  capacitor.config.ts  package-lock.json  package.json
parenting-app/: next.config.js  package-lock.json  package.json
(+382 files in other folders)
