[package]
name = "tabla-game"
version = "0.1.0"
description = "Solana smart contract for Web3 backgammon game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tabla_game"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
switchboard-v2 = "0.4.0"
mpl-token-metadata = "4.1.2"
